<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">YardSale</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <string name="login_username_hint">input your email&#8230;</string>
    <string name="login_password_hint">input your password&#8230;</string>
    <string name="login_email_hint">Confirm password&#8230;</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="register_txt1">Want a Account?</string>
    <string name="register_txt2">Register Now></string>
    <string name="login_account">email </string>
    <string name="login_pwd">Password </string>
    <string name="login_email">RePassword </string>
    <string name="message_search_hint">搜索&#8230;</string>
    <string name="register_name">name</string>
    <string name="register_name_hint">input your name&#8230;</string>
    <string name="reset_old">input your password</string>
    <string name="reset_new">input your new password</string>
    <string name="reset_repeat">confirm your password</string>
</resources>
