<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#232629"
    android:orientation="vertical" >



    <LinearLayout
            style="@style/Register_Input"
            android:background="@drawable/corners_bg">

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/login_account"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_email"
            style="@style/Register_Edit"
            android:textColor="#FFFFFF"
            android:singleLine="true"
            android:hint="@string/login_username_hint" />
    </LinearLayout>

    <LinearLayout
            style="@style/Register_Input"
            android:background="@drawable/corners_bg">

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:textColor="#FFFFFF"
            android:text="@string/register_name"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_name"
            style="@style/Register_Edit"
            android:textColor="#FFFFFF"
            android:singleLine="true"
            android:hint="@string/register_name_hint" />
    </LinearLayout>
    
    <LinearLayout
            style="@style/Register_Input"
            android:background="@drawable/corners_bg">

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:textColor="#FFFFFF"
            android:text="@string/login_pwd"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_password"
            style="@style/Register_Edit"
            android:textColor="#FFFFFF"
            android:singleLine="true"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
            style="@style/Register_Input"
            android:background="@drawable/corners_bg">

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:textColor="#FFFFFF"
            android:text="@string/login_email"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_repassword"
            style="@style/Register_Edit"
            android:textColor="#FFFFFF"
            android:singleLine="true"
            android:hint="@string/login_email_hint"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/base_action_bar_height"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@drawable/button_chick_style"
        android:text="@string/register"
        android:textColor="@color/base_color_text_white"
        android:textSize="@dimen/text_size_large"
        android:gravity="center"/>

</LinearLayout>