<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#232629" >


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="14"
                android:background="#e05b5b">
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="Reset Password"
                    android:textColor="#FFFFFF"
                    android:textSize="20dp"
                    android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1" android:weightSum="1">
            <LinearLayout
                    style="@style/Register_Input"
                    android:background="@drawable/corners_bg">

                <TextView
                        style="@style/Smile.TextView._Black"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:text="Old"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />

                <EditText
                        android:id="@+id/et_oldpwd"
                        android:password="true"
                        style="@style/Register_Edit"
                        android:textColor="#FFFFFF"
            			android:singleLine="true"
                        android:hint="@string/reset_old" />
            </LinearLayout>

            <LinearLayout
                    style="@style/Register_Input"
                    android:background="@drawable/corners_bg">

                <TextView
                        style="@style/Smile.TextView._Black"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:text="New"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />

                <EditText
                        android:id="@+id/et_newpwd"
                        android:password="true"
                        style="@style/Register_Edit"
                        android:textColor="#FFFFFF"
            			android:singleLine="true"
                        android:hint="@string/reset_new" />
            </LinearLayout>
            <LinearLayout
                    style="@style/Register_Input"
                    android:background="@drawable/corners_bg">

                <TextView
                        style="@style/Smile.TextView._Black"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:text="Repeat"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />

                <EditText
                        android:id="@+id/et_repeatpwd"
                        android:password="true"
                        style="@style/Register_Edit"
                        android:textColor="#FFFFFF"
            			android:singleLine="true"
                        android:hint="@string/reset_repeat" />
            </LinearLayout>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@drawable/base_horization_line" />
            <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/base_action_bar_height"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:background="@drawable/button_chick_style"
                    android:text="submit"
                    android:textColor="@color/base_color_text_white"
                    android:textSize="@dimen/text_size_large"
                    android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>